@@ -1,4 +1,4 @@
-@set UPDATED 11 June 2005
-@set UPDATED-MONTH June 2005
+@set UPDATED 23 July 2005
+@set UPDATED-MONTH July 2005
 @set EDITION 2.1.5
 @set VERSION 2.1.5
