@@ -18,6 +18,7 @@ Version 2.1.5
    - Bugfix: Obtaining keyboard focus automatically (thanks to Wade Berrier
         for reminding us of this bug and for providing a patch)
    - Added Wade Berrier to contributors
+   - Feature: Option "pop3_max_uid_length" for dealing with buggy servers
 
 Version 2.1.4		2005-06-27 22:45
  * Robert Sowada
